<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegreeapps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotstreamer">Spotify Streamer</string>
    <string name="scores">Super Duo</string>
    <string name="buildbigger">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
