<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanodegreeapps"
        android:layout_marginBottom="8dp"
        android:textSize="30sp"
        android:textColor="@color/primary_text_default_material_light" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/spotstreamer"
        android:id="@+id/spotifyButton"
        android:layout_marginTop="8dp"

        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/scoresButton"
        android:layout_marginTop="8dp"

        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/buildbigger"
        android:id="@+id/buildbiggerButton"
        android:layout_marginTop="8dp"

        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:id="@+id/xyzButton"
        android:layout_marginTop="8dp"

        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_marginTop="8dp"

        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="#D81B60"
        android:textStyle="bold" />


</LinearLayout>
